third_party/move/move-compiler-v2/tests/visibility-checker/resources_invalid.exp

Diagnostics:
warning: field access on `objects::ReaderRef` can only be done within module `0x42::objects`, but `objects::reader` could be called (and expanded) outside
  ┌─ tests/visibility-checker/resources_invalid.move:7:23
  │
7 │     public inline fun reader<T: key>(ref: &ReaderRef<T>): &T {
  │                       ^^^^^^
8 │         borrow_global<T>(ref.addr)
  │                          -------- field access here

error: Invalid operation: field access on `objects::ReaderRef` can only be done within module `0x42::objects`
   ┌─ tests/visibility-checker/resources_invalid.move:17:16
   │
 8 │         borrow_global<T>(ref.addr)
   │                          -------- field access here
   ·
17 │     public fun get_value(ref: &obj::ReaderRef<Token>): u64 {
   │                ^^^^^^^^^
18 │         obj::reader(ref).val
   │         ---------------- from a call inlined at this callsite
